[damyan] transduce() speed optimization using SimpleSortedSet for annotationsByOffset